--- a/index.html
+++ b/index.html
@@ -15,22 +15,25 @@
 			</div>
 			<div class = "B-line">
 				<div class = "Button">
-					<a href = "">
+					<a href = "Essay.html">
 						<img class = "B-img" src = "Image/button/essay.png   "/>
 					</a>
 				</div>
 				<div class = "Button">
-					<a href = "">
-						<img class = "B-img" src = "Image/button/personal.png"/></div>
+					<a href = "Personal.html">
+						<img class = "B-img" src = "Image/button/personal.png"/>
 					</a>
+				</div>
 				<div class = "Button">
-					<a href = "">
-						<img class = "B-img" src = "Image/button/code.png    "/></div>
+					<a href = "Code.htm">
+						<img class = "B-img" src = "Image/button/code.png    "/>
 					</a>
+				</div>
 				<div class = "Button">
-					<a href = "">
-						<img class = "B-img" src = "Image/button/favorite.png"/></div>
+					<a href = "Favorite.htm">
+						<img class = "B-img" src = "Image/button/favorite.png"/>
 					</a>
+				</div>
 			</div>
 			<div style = "height:35%;"></div>
 			<div class = "CopyRight">
