--- a/Favorite.html
+++ b/Favorite.html
@@ -4,7 +4,7 @@
         <link rel="stylesheet" type="text/css" href="css/StyleCSS/Background.css" />
 		<link rel="stylesheet" type="text/css" href="css/StyleCSS/Button.css" />
 		<link rel="stylesheet" type="text/css" href="css/StyleCSS/Message.css" />
-        <link rel="stylesheet" type="text/css" href="css/PageCSS/Essay.css" />
+        <link rel="stylesheet" type="text/css" href="css/PageCSS/Favorite.css" />
     </head>
     <body class = "Background" id = "Background">
         <div class = "Filter-dark" id = "EssayFilter">
@@ -14,27 +14,27 @@
             -->
             <div id = "Blank-top"></div>
             <div id = "MainPage">
-                <div class = "Paper" id = "ArticlePage">
-                    <div class = "Article" id = "Article">
-                        <div class = "Top-word">
-                                Wish what I like can be your right.
-                        </div>
-                        <div class = "Preview-word">
-                            <a href = "Favorite/1.html" style = "text-decoration: none;"><h>总还有另一种说法</h></a>
-                            <p>
-                                胡言县的外环有个地方叫长矩街。当初胡言县城城区规划的时候，有人说这两道街明显构成一个长廊形，
-                                就叫十里长街吧，十里长街多阔气！有的人却不大乐意；这明显就是个矩形嘛，当然叫矩街喽，不以规
-                                矩难以方圆嘛，最后没办法搞了个民意投票...
-                            </p>
-                            <p1>文章 &emsp; 转载：萌芽杂志社 &emsp; 作者：汤斌 &emsp; 2018-7-4</p1>
-                        </div>
-                        <div id = "Blank-bottom"></div>
+                <div id = "ArticlePage">
+                    <div class = "Paper" id = "List1">
+                    </div>    
+                    <div class = "Paper" id = "List2">
+                    </div>
+                    <div class = "Paper" id = "List3">
+                    </div> 
+                    <div class = "Paper" id = "List4">
+                    </div>             
+                    <div class = "Paper" id = "List5">
                     </div>
                 </div>
                 <div class = "GuideLine">
                     <div class = "RoundButton">
                         <a href = "index.html">
                             <img class = "Button-img-30" src = "Image/button/home-blue.png"/>
+                        </a>
+                    </div>
+                    <div class = "RoundButton">
+                        <a href = "Essay.html">
+                            <img class = "Button-img-30" src = "Image/button/essay.png"/>
                         </a>
                     </div>
                     <div class = "RoundButton">
@@ -46,12 +46,7 @@
                         <a href = "Code.html">
                             <img class = "Button-img-30" src = "Image/button/code.png"/>
                         </a>
-                    </div>
-                    <div class = "RoundButton">
-                        <a href = "Favorite.html">
-                            <img class = "Button-img-30" src = "Image/button/favorite.png"/>
-                        </a>
-                    </div>
+                    </div>         
                 </div>
             </div>
         </div>
