--- a/index.html
+++ b/index.html
@@ -1,41 +1,44 @@
 <html>
 	<head>
 		<meta charset="utf-8"  />
-		<link rel="stylesheet" type="text/css" href="css/HomePage.css" />
+		<link rel="stylesheet" type="text/css" href="css/StyleCSS/Background.css" />
+		<link rel="stylesheet" type="text/css" href="css/StyleCSS/Button.css" />
+		<link rel="stylesheet" type="text/css" href="css/StyleCSS/Message.css" />
+		<link rel="stylesheet" type="text/css" href="css/PageCSS/Index.css" />
 	</head>
-	<body class = "BackGround">
-		<div class = "BackGround-Filter">
-			<div class = "blank1"></div>
-			<div class = "HeadTitle">
+	<body class = "Background" id = "Background">
+		<div class = "Filter-light" id = "indexFilter">
+			<div id = "Blank-top"></div>
+			<div class = "HeadTitle" id = "HeadTitle">
 				Kowalski-Zireael
 			</div>
-			<div class = "HeadText">
+			<div class = "HeadText" id = "HeadText">
 				No town can never be home</br>
 				yet the past can never be back.
 			</div>
-			<div class = "B-line">
-				<div class = "Button">
+			<div id = "ButtonLine">
+				<div class = "Button-horizon">
 					<a href = "Essay.html">
-						<img class = "B-img" src = "Image/button/essay.png   "/>
+						<img class = "Button-img-60" src = "Image/button/essay.png   "/>
 					</a>
 				</div>
-				<div class = "Button">
+				<div class = "Button-horizon">
 					<a href = "Personal.html">
-						<img class = "B-img" src = "Image/button/personal.png"/>
+						<img class = "Button-img-60" src = "Image/button/personal.png"/>
 					</a>
 				</div>
-				<div class = "Button">
-					<a href = "Code.htm">
-						<img class = "B-img" src = "Image/button/code.png    "/>
+				<div class = "Button-horizon">
+					<a href = "Code.html">
+						<img class = "Button-img-60" src = "Image/button/code.png    "/>
 					</a>
 				</div>
-				<div class = "Button">
-					<a href = "Favorite.htm">
-						<img class = "B-img" src = "Image/button/favorite.png"/>
+				<div class = "Button-horizon">
+					<a href = "Favorite.html">
+						<img class = "Button-img-60" src = "Image/button/favorite.png"/>
 					</a>
 				</div>
 			</div>
-			<div style = "height:35%;"></div>
+			<div id = "Blank-bottom"></div>
 			<div class = "CopyRight">
 				copyright © Kowalski Zireael at SUSTech Contact with Kowalski-Zireael@outlook.com
 			</div>
