--- a/Favorite.html
+++ b/Favorite.html
@@ -15,15 +15,28 @@
             <div id = "Blank-top"></div>
             <div id = "MainPage">
                 <div id = "ArticlePage">
-                    <div class = "Paper" id = "List1">
+                    <div class = "List LeftF">
+                        <div class = "Block Paper H60">
+                        </div>
+                        <div class = "Block Paper H100">
+                        </div>
                     </div>    
-                    <div class = "Paper" id = "List2">
+                    <div class = "List LeftF">
+                        <div class = "Block Paper H140">
+                        </div>
                     </div>
-                    <div class = "Paper" id = "List3">
+                    <div class = "List LeftF">
+                        <div class = "Block Paper H100">
+                        </div>
                     </div> 
-                    <div class = "Paper" id = "List4">
+                    <div class = "List LeftF">
+                        <div class = "Block Paper H60">
+                        </div>
                     </div>             
-                    <div class = "Paper" id = "List5">
+                    <div class = "List LeftF"
+                         style = "margin-right: 0px;">
+                        <div class = "Block Paper H140">
+                        </div>
                     </div>
                 </div>
                 <div class = "GuideLine">
