--- a/Essay.html
+++ b/Essay.html
@@ -38,21 +38,27 @@
                     <div class = "Article" id = "Article">
                         <div class = "Top-word"></div>
                         <div class = "Preview-word">
-                            <a href = "Essay/SK/学术通感.html" style = "text-decoration: none;" target="_blank"><h>学术通感</h></a>
+                                <a href = "Essay/XS/LinearAlgebra.html" style = "text-decoration: none;"><h>Linear Algebra Done Right</h></a>
+                                <p sytle = "line-height: 22px;">
+                                </p>
+                                <p style = "line-height: 22px; font-family: 幼圆; font-size: 13px;" >Zireael &emsp; 2019-6-21 &emsp; 笔记</p>
+                        </div>
+                        <div class = "Preview-word">
+                            <a href = "Essay/SK/学术通感.html" style = "text-decoration: none;"><h>学术通感</h></a>
                             <p sytle = "line-height: 22px;">
                                 我第一次知晓通感这个词，还是在小学上《紫藤萝瀑布》一课的时候，文中“香气似乎也是淡紫色的,梦幻一般轻轻地笼罩着我”一句便是运用通感...
                             </p>
                             <p style = "line-height: 22px; font-family: 幼圆; font-size: 13px;" >Zireael &emsp; 2018-7-27 &emsp; 思考</p>
                         </div>
                         <div class = "Preview-word">
-                            <a href = "Essay/SB/画地为圈.html" style = "text-decoration: none;" target="_blank"><h>画地为圈</h></a>
+                            <a href = "Essay/SB/画地为圈.html" style = "text-decoration: none;"><h>画地为圈</h></a>
                             <p sytle = "line-height: 22px;">
                                 在座无虚席的图书馆转悠一周后才悲伤的发现，2、3楼自今日起开始施工，一直持续到8月中下。换言之，被我的体态完美勾勒塑形的座位，从今日起要开始迎合...
                             </p>
                             <p style = "line-height: 22px; font-family: 幼圆; font-size: 13px;" >Zireael &emsp; 2018-7-16 &emsp; 随笔</p>
                         </div>
                         <div class = "Preview-word">
-                            <a href = "Essay/SB/言之外.html" style = "text-decoration: none;" target="_blank"><h>言之外</h></a>
+                            <a href = "Essay/SB/言之外.html" style = "text-decoration: none;"><h>言之外</h></a>
                             <p sytle = "line-height: 22px;">
                                 我记得第一次在申请个人主页的时候，会从曾经的日记或周记中搜刮，任何一点貌似有油水的文字都不会放过...
                             </p>
