--- a/Time.html
+++ b/Time.html
@@ -44,7 +44,7 @@
             <div id = "MainPage">
                 <div class = "Paper" style = "width:680px; margin:auto; margin-bottom: 15px;">
                     <div style = "height: 5px;"></div>
-                    <div class = "ListMessage">
+                    <div class = "ListMessageF">
                         Do not ask whether a statement is true until you know what it means.</br>
                         &lt;Errett Bishop&gt;</br>
                         </br>
@@ -55,14 +55,14 @@
                 </div>
                 <div class = "Paper" style = "width:320px; margin:auto; margin-bottom: 15px;">
                     <div style = "height: 5px;"></div>
-                    <div class = "ListMessage">
+                    <div class = "ListMessageF">
                         挽狂澜于既倒，扶大厦之将倾。
                     </div>
                     <div style = "height: 5px;"></div>
                 </div>
                 <div class = "Paper" style = "width:400px; margin:auto; margin-bottom: 15px;">
                     <div style = "height: 5px;"></div>
-                    <div class = "ListMessage">
+                    <div class = "ListMessageF">
                         我于杀戮之中绽放，亦如黎明中的花朵。</br>
                         In carnage, I bloom...like a flower in the dawn.</br>
                         &lt;Khada Jhin 烬&gt;
