--- a/Essay/SK.html
+++ b/Essay/SK.html
@@ -38,7 +38,7 @@
                     <div class = "Article" id = "Article">
                         <div class = "Top-word"></div>
                         <div class = "Preview-word">
-                            <a href = "SK/学术通感.html" style = "text-decoration: none;" target="_blank"><h>学术通感</h></a>
+                            <a href = "SK/学术通感.html" style = "text-decoration: none;"><h>学术通感</h></a>
                             <p sytle = "line-height: 22px;">
                                 我第一次知晓通感这个词，还是在小学上《紫藤萝瀑布》一课的时候，文中“香气似乎也是淡紫色的,梦幻一般轻轻地笼罩着我”一句便是运用通感...
                             </p>
