--- a/Essay/XS.html
+++ b/Essay/XS.html
@@ -21,7 +21,7 @@
             
             <div id = "MainPage">
                 <div class = "SubTitle" id = "Blank-top">
-                            EASY HEART<div class = "Flag">随笔</div>
+                            MAJOR NOTE<div class = "Flag">学术</div>
                 </div>
                 <div id = "LeftLine">
                     <div style = "height: 50px;"></div>
@@ -38,19 +38,11 @@
                     <div class = "Article" id = "Article">
                         <div class = "Top-word"></div>
                             <div class = "Preview-word">
-                                <a href = "SB/画地为圈.html" style = "text-decoration: none;"><h>画地为圈</h></a>
+                                <a href = "XS/LinearAlgebra.html" style = "text-decoration: none;"><h>Linear Algebra Done Right</h></a>
                                 <p sytle = "line-height: 22px;">
-                                    在座无虚席的图书馆转悠一周后才悲伤的发现，2、3楼自今日起开始施工，一直持续到8月中下。换言之，被我的体态完美勾勒塑形的座位，从今日起要开始迎合...
                                 </p>
-                                <p style = "line-height: 22px; font-family: 幼圆; font-size: 13px;" >Zireael &emsp; 2018-7-16 &emsp; 随笔</p>
+                                <p style = "line-height: 22px; font-family: 幼圆; font-size: 13px;" >Zireael &emsp; 2019-6-21 &emsp; 笔记</p>
                             </div>
-                        <div class = "Preview-word">
-                            <a href = "SB/言之外.html" style = "text-decoration: none;"><h>言之外</h></a>
-                            <p sytle = "line-height: 22px;">
-                                    我记得第一次在申请个人主页的时候，会从曾经的日记或周记中搜刮，任何一点貌似有油水的文字都不会放过...
-                            </p>
-                            <p style = "line-height: 22px; font-family: 幼圆; font-size: 13px;" >Zireael &emsp; 2018-7-9 &emsp; 随笔</p>
-                        </div>
                         <div id = "Blank-bottom"></div>
                     </div>
                 </div>
