--- a/Favorite.html
+++ b/Favorite.html
@@ -35,10 +35,20 @@
                         <div class = "Block Paper">
                             <div style = "height:5px;"></div>
                             <div class = "ListMessageF">
+                                <a href = "Favorite/喂-出来.html" style = "text-decoration:none;" target="_blank">
+                                    <h style = "font-size: 14; text-align: left;">喂——出来！</h>
+                                </a>
+                                <p style = "font-size: 12; text-align: right;">星新一 转载 短篇小说</p>
+                            </div>
+                            <div style = "height:5px;"></div>
+                        </div>
+                        <div class = "Block Paper">
+                            <div style = "height:5px;"></div>
+                            <div class = "ListMessageF">
                                 <a href = "Favorite/总还有另一种说法.html" style = "text-decoration:none;" target="_blank">
                                     <h style = "font-size: 14; text-align: left;">总还有另一种说法</h>
                                 </a>
-                                <p style = "font-size: 12; text-align: right;">汤斌 转载文章 小说</p>
+                                <p style = "font-size: 12; text-align: right;">汤斌 转载 短篇小说</p>
                             </div>
                             <div style = "height:5px;"></div>
                         </div>
