--- a/Favorite/总还有另一种说法.html
+++ b/Favorite/总还有另一种说法.html
@@ -21,7 +21,7 @@
             
             <div id = "MainPage">
                 <div class = "SubTitle" style = "width: 600px;" id = "Blank-top">
-                            ANOTHER TRUTH<div class = "Flag">随笔</div>
+                            ANOTHER TRUTH<div class = "Flag">文章</div>
                 </div>
                 <div id = "LeftLine">
                     <div style = "height: 50px;"></div>
