--- a/Essay/XS.html
+++ b/Essay/XS.html
@@ -37,12 +37,18 @@
                 <div class = "Paper" id = "ArticlePage">
                     <div class = "Article" id = "Article">
                         <div class = "Top-word"></div>
-                            <div class = "Preview-word">
-                                <a href = "XS/LinearAlgebra.html" style = "text-decoration: none;"><h>Linear Algebra Done Right</h></a>
-                                <p sytle = "line-height: 22px;">
-                                </p>
-                                <p style = "line-height: 22px; font-family: 幼圆; font-size: 13px;" >Zireael &emsp; 2019-6-21 &emsp; 笔记</p>
-                            </div>
+                        <div class = "Preview-word">
+                            <a href = "XS/OrdinaryDifferentialEquation.html" style = "text-decoration: none;"><h>Ordinary Differential Equation</h></a>
+                            <p sytle = "line-height: 22px;">
+                            </p>
+                            <p style = "line-height: 22px; font-family: 幼圆; font-size: 13px;" >Zireael &emsp; 2019-6-26 &emsp; 笔记</p>
+                        </div>
+                        <div class = "Preview-word">
+                            <a href = "XS/LinearAlgebra.html" style = "text-decoration: none;"><h>Linear Algebra Done Right</h></a>
+                            <p sytle = "line-height: 22px;">
+                            </p>
+                            <p style = "line-height: 22px; font-family: 幼圆; font-size: 13px;" >Zireael &emsp; 2019-6-21 &emsp; 笔记</p>
+                        </div>
                         <div id = "Blank-bottom"></div>
                     </div>
                 </div>
